# database_of_restaurants

./: CMakeLists.txt  database_of_restaurants.cpp  database_of_restaurants.h  functions.cpp  functions.h  imports.h  menu_list.cpp  menu_list.h  notes.txt  restarant.txt  restaurant_list.cpp  restaurant_list.h  review_list.cpp  review_list.h  work_with_all_lists.cpp  work_with_all_lists.h  work_with_menus.cpp  work_with_menus.h  work_with_restaurants.cpp  work_with_restaurants.h  work_with_reviews.cpp  work_with_reviews.h
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  database_of_restaurants.sln  database_of_restaurants.vcxproj  database_of_restaurants.vcxproj.filters
build_win/database_of_restaurants.dir/Release/: database_of_restaurants.exe.recipe
build_win/database_of_restaurants.dir/Release/database.AC84A04E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  database_of_restaurants.lastbuildstate  (+3 more)
database_of_restaurants/src/: database_of_restaurants.h  functions.h  menu_list.cpp  menu_list.h  restaurant_list.cpp  work_with_all_lists.cpp  work_with_all_lists.h  work_with_menus.cpp
example_db_files/: menu.txt  review.txt
src/: database_of_restaurants.cpp  functions.cpp  imports.h  main.c  restaurant_list.c  restaurant_list.h  review_list.cpp  review_list.h  types.h  work_with_menus.h  work_with_restaurants.cpp  work_with_restaurants.h  work_with_reviews.cpp  work_with_reviews.h
(+4 files in other folders)
